--- a/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
@@ -1,10 +1,10 @@
-<div class="grid grid-cols-12 gap-4 mb-12">
+<div class="flex flex-col w-full gap-4">
   <app-turns-truck-info-base-form
-    class="col-span-12 py-0"
+    class="w-full"
     [truckId]="truckId"
     [sequentialTurnId]="sequentialTurnId"
   />
-  <div class="grid grid-cols-12 gap-4 col-span-12 items-center">
+  <div class="flex flex-col md:flex-row gap-4 justify-center items-center">
     <app-date-picker-input
       label="تاریخ رزرو نوبت"
       [control]="date"
@@ -19,12 +19,13 @@
       class="col-span-12 md:col-span-6"
     />
   </div>
-  <div class="col-span-12 md:flex md:justify-end">
+  <app-form-buttons-section [customClass]="'!mt-0'">
     <app-button
       label="درخواست صدور نوبت"
-      styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
+      class="w-full md:w-fit"
+      styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       [disabled]="resuscitateTurnForm.invalid || loading"
       (click)="submitResuscitateTurnForm()"
     />
-  </div>
+  </app-form-buttons-section>
 </div>
