--- a/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
@@ -1,12 +1,16 @@
-<div class="mb-12">
-  <app-turns-truck-info-base-form [truckId]="truckId" [sequentialTurnId]="sequentialTurnId" />
+<div class="flex flex-col">
+  <app-turns-truck-info-base-form
+    [truckId]="truckId"
+    [sequentialTurnId]="sequentialTurnId"
+  />
 
-  <div class="w-full md:flex md:justify-end my-5">
+  <app-form-buttons-section [customClass]="'!mt-4'">
     <app-button
       [label]="appTitle.buttons.newTurnRequest"
-      styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
+      class="w-full md:w-fit"
+      styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       [disabled]="sequentialTurnId.invalid"
       (click)="submitRealTimeTurn()"
     />
-  </div>
+  </app-form-buttons-section>
 </div>
