--- a/src/app/components/forms/turns-management-form/emergency-time-turns-form copy/emergency-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/emergency-time-turns-form copy/emergency-turns-form.component.html
@@ -1,23 +1,26 @@
-<div class="grid grid-cols-12 gap-4 mb-12">
+<div class="flex flex-col w-full gap-4">
   <app-turns-truck-info-base-form
-    class="col-span-12 py-0"
+    class="w-full"
     [truckId]="truckId"
     [sequentialTurnId]="sequentialTurnId"
   />
-  <app-text-input
-    [control]="descriptions"
-    validationField="description"
-    label="شرح کاربر"
-    addonWidth="7rem"
-    placeholder="شرح کاربر"
-    class="col-span-12 py-0"
-  />
-  <div class="col-span-12 md:flex md:justify-end">
+  <div class="flex justify-center w-full">
+    <app-text-input
+      [control]="descriptions"
+      validationField="description"
+      label="شرح کاربر"
+      addonWidth="7rem"
+      placeholder="شرح کاربر"
+      class="min-w-[70%]"
+    />
+  </div>
+  <app-form-buttons-section [customClass]="'!mt-0'">
     <app-button
       label="درخواست صدور نوبت"
-      styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
+      class="w-full md:w-fit"
+      styleClass="md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       [disabled]="emergencyTurnForm.invalid || loading"
       (click)="submitEmergencyTurn()"
     />
-  </div>
+  </app-form-buttons-section>
 </div>
