refactor(truck-info-form.component): add form card to component style

--- a/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
@@ -20,7 +20,7 @@
   </form>
 
   <!-- Truck Info & Nativeness Form -->
-  <app-section-card>
+  <app-form-inputs-section>
     <form
       [class.pointer-events-none]="loading"
       [class.opacity-60]="loading"
@@ -87,9 +87,9 @@
         </div>
       </div>
     </form>
-  </app-section-card>
+  </app-form-inputs-section>
 
-  <app-section-card>
+  <app-form-inputs-section>
     <form
       class="p-fluid grid grid-cols-12 gap-4 col-span-12"
       [class.pointer-events-none]="loading"
@@ -128,7 +128,7 @@
         </div>
       </div>
     </form>
-  </app-section-card>
+  </app-form-inputs-section>
 
   <!-- Action Buttons -->
   <div class="flex w-full justify-center">
