--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -1,110 +1,109 @@
-<div class="flex flex-col justify-center gap-5">
+<div class="flex w-full flex-col justify-center gap-5">
   <form
-    class="flex justify-center self-center w-full"
+    class="flex justify-center w-full"
     [class.pointer-events-none]="loading"
     [class.opacity-60]="loading"
     [formGroup]="searchForm"
   >
-    <app-search-input
-      [control]="searchNationalId"
-      validationField="nationalId"
-      icon="pi pi-search"
-      class="min-w-[70%]"
-      [placeholder]="appTitle.getPlaceholder('userNationalCodePlaceholder')"
-      [searchButtonLabel]="appTitle.buttons.retrieveFromOutdoorSystem"
-      [disableSearchButton]="this.searchForm.invalid"
-      [onSearchQuery]="loadDriverInfoFromAPI"
-      type="number"
-    />
+    <div class="min-w-[70%]">
+      <app-search-input
+        [control]="searchNationalId"
+        validationField="nationalId"
+        icon="pi pi-search"
+        [placeholder]="appTitle.getPlaceholder('userNationalCodePlaceholder')"
+        [searchButtonLabel]="appTitle.buttons.retrieveFromOutdoorSystem"
+        [disableSearchButton]="this.searchForm.invalid"
+        [onSearchQuery]="loadDriverInfoFromAPI"
+        type="number"
+      />
+    </div>
   </form>
 
-  <app-section-card>
-    <div class="flex flex-col gap-2 md:gap-5">
-      <div class="flex flex-col md:flex-row gap-2">
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.drivers.driverId"
-          [readOnly]="true"
-          [control]="driverId"
-          validationField="driverId"
-          [addonWidth]="addonWidth"
-        />
+  <app-form-inputs-section>
+    <div class="flex flex-col md:flex-row gap-2">
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.drivers.driverId"
+        [readOnly]="true"
+        [control]="driverId"
+        validationField="driverId"
+        [addonWidth]="addonWidth"
+      />
 
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.users.userNationalCodeTitle"
-          [control]="nationalId"
-          validationField="nationalId"
-          [readOnly]="true"
-          [addonWidth]="addonWidth"
-          type="number"
-        />
-      </div>
-
-      <div class="flex flex-col md:flex-row gap-2">
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.users.userNameAndLastName"
-          [control]="fullName"
-          validationField="fullName"
-          [readOnly]="true"
-          [addonWidth]="addonWidth"
-        />
-
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.users.userFatherName"
-          [control]="fatherName"
-          validationField="fatherName"
-          [readOnly]="true"
-          [addonWidth]="addonWidth"
-        />
-      </div>
-
-      <div class="flex flex-col md:flex-row gap-2">
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.drivers.driverLicenseNumber"
-          [control]="licenseNumber"
-          validationField="licenseNumber"
-          [readOnly]="true"
-          [addonWidth]="addonWidth"
-        />
-
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.drivers.driverSmartCardNumber"
-          [control]="smartCard"
-          validationField="smartCard"
-          [readOnly]="true"
-          [addonWidth]="addonWidth"
-        />
-      </div>
-
-      <div class="flex flex-col md:flex-row gap-2">
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.phoneNumbers.inputTitle"
-          [placeholder]="appTitle.getPlaceholder('userPhoneNumberPlaceholder')"
-          [control]="mobile"
-          validationField="mobile"
-          [addonWidth]="addonWidth"
-          [buttonDisabled]="driverForm.invalid"
-          (clickButton)="updateDriverMobileNumber()"
-          type="number"
-        />
-
-        <app-text-input
-          class="w-full"
-          [label]="appTitle.inputs.global.address"
-          [control]="address"
-          validationField="address"
-          [addonWidth]="addonWidth"
-          [readOnly]="true"
-        />
-      </div>
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.users.userNationalCodeTitle"
+        [control]="nationalId"
+        validationField="nationalId"
+        [readOnly]="true"
+        [addonWidth]="addonWidth"
+        type="number"
+      />
     </div>
-  </app-section-card>
+
+    <div class="flex flex-col md:flex-row gap-2">
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.users.userNameAndLastName"
+        [control]="fullName"
+        validationField="fullName"
+        [readOnly]="true"
+        [addonWidth]="addonWidth"
+      />
+
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.users.userFatherName"
+        [control]="fatherName"
+        validationField="fatherName"
+        [readOnly]="true"
+        [addonWidth]="addonWidth"
+      />
+    </div>
+
+    <div class="flex flex-col md:flex-row gap-2">
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.drivers.driverLicenseNumber"
+        [control]="licenseNumber"
+        validationField="licenseNumber"
+        [readOnly]="true"
+        [addonWidth]="addonWidth"
+      />
+
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.drivers.driverSmartCardNumber"
+        [control]="smartCard"
+        validationField="smartCard"
+        [readOnly]="true"
+        [addonWidth]="addonWidth"
+      />
+    </div>
+
+    <div class="flex flex-col md:flex-row gap-2">
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.phoneNumbers.inputTitle"
+        [placeholder]="appTitle.getPlaceholder('userPhoneNumberPlaceholder')"
+        [control]="mobile"
+        validationField="mobile"
+        [addonWidth]="addonWidth"
+        [buttonDisabled]="driverForm.invalid"
+        (clickButton)="updateDriverMobileNumber()"
+        type="number"
+      />
+
+      <app-text-input
+        class="w-full"
+        [label]="appTitle.inputs.global.address"
+        [control]="address"
+        validationField="address"
+        [addonWidth]="addonWidth"
+        [readOnly]="true"
+      />
+    </div>
+  </app-form-inputs-section>
 
   <!-- Action Buttons -->
   <div
