--- a/src/app/components/forms/load-management-form/loads-announcement-form/loads-announcement-form.component.html
+++ b/src/app/components/forms/load-management-form/loads-announcement-form/loads-announcement-form.component.html
@@ -1,14 +1,3 @@
-<div class="flex justify-between items-center mb-5">
-  <app-button
-    class="flex justify-end w-full px-1"
-    label="جدید"
-    size="small"
-    [severity]="'info'"
-    styleClass="px-6 md:px-8 py-2"
-    (click)="reloadForm()"
-  />
-</div>
-
 <!-- Binary Radio Input for Load Type -->
 <app-binary-radio-input
   class="col-span-12 md:col-span-6 lg:col-span-4 flex pb-4 pr-1"
@@ -18,124 +7,135 @@
   [enableColor]="false"
 ></app-binary-radio-input>
 
-<div class="grid grid-cols-12 gap-4">
-  <!-- Load ID (Read-only) -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [label]="appTitles.inputs.loads.loadId"
-    [control]="ctrl('LoadId')"
-    [addonWidth]="addonWidth"
-    [readOnly]="true"
-  ></app-text-input>
+<app-form-inputs-section>
+  <app-form-inputs-section [flexDir]="'flex-row'" [isCard]="false">
+    <!-- Load ID (Read-only) -->
+    <app-text-input
+      class="w-full"
+      [label]="appTitles.inputs.loads.loadId"
+      [control]="ctrl('LoadId')"
+      [addonWidth]="addonWidth"
+      [readOnly]="true"
+    ></app-text-input>
 
-  <!-- Announcement Date (Read-only) -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [label]="appTitles.inputs.loadAnnouncementDetails.loadDateAndTime"
-    [control]="ctrl('AnnounceDate')"
-    [addonWidth]="addonWidth"
-    [readOnly]="true"
-  ></app-text-input>
+    <!-- Announcement Date (Read-only) -->
+    <app-text-input
+      class="w-full"
+      [label]="appTitles.inputs.loadAnnouncementDetails.loadDateAndTime"
+      [control]="ctrl('AnnounceDate')"
+      [addonWidth]="addonWidth"
+      [readOnly]="true"
+    ></app-text-input>
 
-  <!-- Load Status Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.loadStatus"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Load Status Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.loadStatus"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
+  </app-form-inputs-section>
 
-  <!-- Transport Company Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.transportCompany"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+  <app-form-inputs-section [flexDir]="'flex-row'" [isCard]="false">
+    <!-- Transport Company Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.transportCompany"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
 
-  <!-- Announcement Group Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.announcementGroup"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Announcement Group Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.announcementGroup"
+      [addonWidth]="addonWidth"
+    >
+    </app-search-auto-complete-factory>
 
-  <!-- Announcement SubGroup Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.announcementSubGroup"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Announcement SubGroup Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.announcementSubGroup"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
+  </app-form-inputs-section>
 
-  <!-- Goods Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.goods"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+  <app-form-inputs-section [flexDir]="'flex-row'" [isCard]="false">
+    <!-- Goods Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.goods"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
 
-  <!-- Source City Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.sourceCity"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Source City Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.sourceCity"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
 
-  <!-- Target City Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.targetCity"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Target City Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.targetCity"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
+  </app-form-inputs-section>
 
-  <!-- Tariff (Read-only) -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [label]="appTitles.inputs.loads.loadCost"
-    [control]="ctrl('Tariff')"
-    [addonWidth]="addonWidth"
-    [readOnly]="true"
-    language="en"
-  ></app-text-input>
+  <app-form-inputs-section [flexDir]="'flex-row'" [isCard]="false">
+    <!-- Tariff (Read-only) -->
+    <app-text-input
+      class="w-full"
+      [label]="appTitles.inputs.loads.loadCost"
+      [control]="ctrl('Tariff')"
+      [addonWidth]="addonWidth"
+      [readOnly]="true"
+      language="en"
+    ></app-text-input>
 
-  <!-- Loading Place Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.loadingPlace"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Loading Place Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.loadingPlace"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
 
-  <!-- Discharging Place Auto-complete -->
-  <app-search-auto-complete-factory
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [config]="autoCompletions.dischargingPlace"
-    [addonWidth]="addonWidth"
-  ></app-search-auto-complete-factory>
+    <!-- Discharging Place Auto-complete -->
+    <app-search-auto-complete-factory
+      class="w-full"
+      [config]="autoCompletions.dischargingPlace"
+      [addonWidth]="addonWidth"
+    ></app-search-auto-complete-factory>
+  </app-form-inputs-section>
 
-  <!-- Total Number -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [label]="appTitles.inputs.loads.loadAmount"
-    [control]="ctrl('TotalNumber')"
-    [addonWidth]="addonWidth"
-    type="number"
-  ></app-text-input>
+  <app-form-inputs-section [flexDir]="'flex-row'" [isCard]="false">
+    <!-- Total Number -->
+    <app-text-input
+      class="w-full"
+      [label]="appTitles.inputs.loads.loadAmount"
+      [control]="ctrl('TotalNumber')"
+      [addonWidth]="addonWidth"
+      type="number"
+    ></app-text-input>
 
-  <!-- Tonaj -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [label]="appTitles.inputs.loads.loadSize"
-    [control]="ctrl('Tonaj')"
-    [addonWidth]="addonWidth"
-    type="number"
-  ></app-text-input>
+    <!-- Tonaj -->
+    <app-text-input
+      class="w-full"
+      [label]="appTitles.inputs.loads.loadSize"
+      [control]="ctrl('Tonaj')"
+      [addonWidth]="addonWidth"
+      type="number"
+    ></app-text-input>
 
-  <!-- Recipient -->
-  <app-text-input
-    class="col-span-12 md:col-span-6 lg:col-span-4"
-    [placeholder]="appTitles.getPlaceholder('loadsRecipient')"
-    [label]="appTitles.inputs.loads.loadRecipient"
-    [control]="ctrl('Recipient')"
-    [addonWidth]="addonWidth"
-  ></app-text-input>
+    <!-- Recipient -->
+    <app-text-input
+      class="w-full"
+      [placeholder]="appTitles.getPlaceholder('loadsRecipient')"
+      [label]="appTitles.inputs.loads.loadRecipient"
+      [control]="ctrl('Recipient')"
+      [addonWidth]="addonWidth"
+    ></app-text-input>
+  </app-form-inputs-section>
 
   <!-- Address -->
   <app-text-input
@@ -154,28 +154,25 @@
     [control]="ctrl('Description')"
     [addonWidth]="addonWidth"
   ></app-text-input>
+</app-form-inputs-section>
 
-  <div
-    class="col-span-12 flex flex-row-reverse justify-start flex-wrap gap-2 mb-2"
-  >
-    @for (button of actionButtons; track button.label) {
-      <div class="{{ button.widthClass }}" [hidden]="button.hidden()">
-        <app-button
-          [styleClass]="'w-full'"
-          [label]="button.label"
-          [severity]="button.severity"
-          [disabled]="button.disabled()"
-          (onClick)="button.action()"
-        ></app-button>
-      </div>
-    }
-  </div>
+<app-form-buttons-section [customClass]="'mb-10'">
+  @for (button of actionButtons; track button.label) {
+    <app-button
+      class="w-full md:w-fit"
+      styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
+      [label]="button.label"
+      [severity]="button.severity"
+      [disabled]="button.disabled()"
+      (onClick)="button.action()"
+    ></app-button>
+  }
+</app-form-buttons-section>
 
-  <span class="text-lg font-bold mt-4 col-span-12">پارامتر های موثر</span>
-  <!-- Transport Tariff Table -->
-  <app-table
-    class="col-span-12"
-    [rows]="transportTariffParams()"
-    [columns]="cols"
-  ></app-table>
-</div>
+<span class="text-lg font-bold mt-4 col-span-12">پارامتر های موثر</span>
+<!-- Transport Tariff Table -->
+<app-table
+  class="col-span-12"
+  [rows]="transportTariffParams()"
+  [columns]="cols"
+></app-table>
